# frametee

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  a.diff  repomix-output.xml
.github/workflows/: build.yml
data/shaders/: atlas.frag.glsl  atlas.vert.glsl  map.frag.glsl  map.vert.glsl  primitive.frag.glsl  primitive.vert.glsl  simple.frag.glsl  simple.vert.glsl  skin.frag.glsl  skin.vert.glsl
libs/: symbols.h
plugins/example_c/: CMakeLists.txt  example.c
plugins/example_cpp/: CMakeLists.txt  example.cpp
plugins/physics_profiler/: CMakeLists.txt  physics_profiler.cpp
plugins/random_input_filler/: CMakeLists.txt  random_input_filler.c
scripts/: fix_style.py
src/: graphics_backend.c  graphics_backend.h  main.c  renderer.c  renderer.h  types.h  user_interface.c  user_interface.h
src/animation/: anim_data.c  anim_data.h  anim_system.c  anim_system.h
src/logger/: logger.c  logger.h
src/particles/: particle_system.c  particle_system.h
src/physics/: physics.c  physics.h
src/plugins/: api_impl.c  api_impl.h  plugin_api.h  plugin_manager.c  plugin_manager.h
src/renderer/: graphics_backend.c  graphics_backend.h  renderer.c  renderer.h
src/system/: config.c  config.h  include_cimgui.h  save.c  save.h
src/user_interface/: demo.c  demo.h  keybinds.c  keybinds.h  net_events.c  net_events.h  player_info.c  player_info.h  skin_browser.c  skin_browser.h  snippet_editor.c  snippet_editor.h  timeline.c  timeline.h  undo_redo.c  undo_redo.h  user_interface.c  user_interface.h
src/user_interface/timeline/: timeline.c  timeline.h  timeline_commands.c  timeline_commands.h  timeline_interaction.c  timeline_interaction.h  timeline_model.c  timeline_model.h  timeline_renderer.c  timeline_renderer.h  timeline_types.h
src/user_interface/widgets/: hsl_colorpicker.c  hsl_colorpicker.h  imcol.h
